--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 </head>
 <body>
     <header>
-        <div class="header">
             <div class="border">
                 <div class="container">
                     <div class="logo">
@@ -30,15 +29,37 @@
                     </div>
                 </div>
             </div>
-        </div>
-
     </header>
 
-    <main>
-        <p></p>
+    <main> 
+        <div class="contenido">
+            <div class="articulos">
+                <div class="container3">
+                        <div><p>.article</p></div>
+                        <div><p>.article</p></div>
+                        <div><p>.article</p></div>
+                        <div><p>.article</p></div>
+                        <div><p>.navegación</p></div>
+                </div>
+            </div>
+
+            <div class="publicidad">
+                <div class="container4">
+                        <div><p>.publicidad</p></div>
+                        <div><p>.publicidad</p></div>
+                </div>
+            </div>
+        </div>
     </main>
+
+
     <footer>
-        <p>.pie</p>
+            <div class="container5">
+                <div class="footer">
+                    <p>.pie</p>
+                </div>
+             </div>
     </footer>
+
 </body>
 </html>
