Modicado el header sin la clase border

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-            <div class="border">
+            <div class="header1">
                 <div class="container">
                     <div class="logo">
                         <p>.logo</p>
@@ -21,14 +21,14 @@
                     </div>
                 </div>
             </div>
-
-            <div class="border">
+            <div class="header2">
                 <div class="container2">
                     <div class="banner">
-                        <h1>.banner</h1>
+                        <h2>.banner</h2>
                     </div>
                 </div>
             </div>
+
     </header>
 
     <main> 
